<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#1A000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clipToPadding="true"
        android:fillViewport="true"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:paddingBottom="@dimen/dp_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line">


        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_title_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/tube_user_city_problem"
                android:textColor="@color/color_262626"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.allen.library.shape.ShapeRelativeLayout
                android:id="@+id/rl_city"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginEnd="@dimen/dp_20"
                android:paddingStart="@dimen/dp_12"
                android:paddingEnd="@dimen/dp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_city"
                app:shapeCornersRadius="@dimen/dp_8"
                app:shapeStrokeColor="@color/color_262626"
                app:shapeStrokeWidth="@dimen/dp_1">

                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="请选择"
                    android:textColor="@color/color_262626"
                    android:textColorHint="@color/color_7F7F7F"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_choice_arrowhead_bottom" />
            </com.allen.library.shape.ShapeRelativeLayout>

            <TextView
                android:id="@+id/tv_title_want"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_56"
                android:text="@string/tube_user_try_problem"
                android:textColor="@color/color_262626"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_city" />


            <com.allen.library.shape.ShapeRelativeLayout
                android:id="@+id/rl_tube_want"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginEnd="@dimen/dp_20"
                android:paddingStart="@dimen/dp_12"
                android:paddingEnd="@dimen/dp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_want"
                app:shapeCornersRadius="@dimen/dp_8"
                app:shapeStrokeColor="@color/color_262626"
                app:shapeStrokeWidth="@dimen/dp_1">

                <TextView
                    android:id="@+id/tv_tube_want"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="请选择"
                    android:textColor="@color/color_262626"
                    android:textColorHint="@color/color_7F7F7F"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_choice_arrowhead_bottom" />
            </com.allen.library.shape.ShapeRelativeLayout>

            <TextView
                android:id="@+id/tv_title_want_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_56"
                android:text="@string/tube_user_try_tube_city_problem"
                android:textColor="@color/color_262626"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_tube_want" />


            <com.allen.library.shape.ShapeRelativeLayout
                android:id="@+id/rl_tube_want_city"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginEnd="@dimen/dp_20"
                android:paddingStart="@dimen/dp_12"
                android:paddingEnd="@dimen/dp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_want_city"
                app:shapeCornersRadius="@dimen/dp_8"
                app:shapeStrokeColor="@color/color_262626"
                app:shapeStrokeWidth="@dimen/dp_1">

                <TextView
                    android:id="@+id/tv_want_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="请选择"
                    android:textColor="@color/color_262626"
                    android:textColorHint="@color/color_7F7F7F"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_choice_arrowhead_bottom" />
            </com.allen.library.shape.ShapeRelativeLayout>

            <TextView
                android:id="@+id/tv_title_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_56"
                android:text="@string/tube_user_try_tube_cost_problem"
                android:textColor="@color/color_262626"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_tube_want_city" />

            <TextView
                android:id="@+id/tv_cost_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_20"
                android:text="@string/tube_user_try_tube_cost_tips_problem"
                android:textColor="#ff7f7f7f"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_cost" />

            <com.allen.library.shape.ShapeRelativeLayout
                android:id="@+id/rl_tube_cost"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginEnd="@dimen/dp_20"
                android:paddingStart="@dimen/dp_12"
                android:paddingEnd="@dimen/dp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cost_tips"
                app:shapeCornersRadius="@dimen/dp_8"
                app:shapeStrokeColor="@color/color_262626"
                app:shapeStrokeWidth="@dimen/dp_1">

                <TextView
                    android:id="@+id/tv_want_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="请选择"
                    android:textColor="@color/color_262626"
                    android:textColorHint="@color/color_7F7F7F"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_choice_arrowhead_bottom" />
            </com.allen.library.shape.ShapeRelativeLayout>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_want"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="tv_title_want_city,rl_tube_want_city,tv_title_cost,rl_tube_cost,tv_cost_tips" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

    <com.allen.library.SuperButton
        android:id="@+id/btn_sure"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_45"
        android:enabled="false"
        android:text="马上预测"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:sCornersRadius="@dimen/dp_10"
        app:sSelectorDisableColor="@color/picture_color_e5"
        app:sSelectorNormalColor="@color/color_currency"
        app:sUseSelector="true" />
</androidx.constraintlayout.widget.ConstraintLayout>
